<resources>
  <string name="app_name" translatable="false">Driver App</string>
  <string name="app_company" translatable="false">ABONA Deutschland GmbH</string>
  <string name="rest_api" translatable="false">REST-API</string>
  <string name="email_support" translatable="false">logging@abona-erp.com</string>
  <string name="useragent_appname" translatable="false">ABONA Driver App</string>
  <string name="tab_text_pending" translatable="false">Pending</string>
  <string name="tab_text_running" translatable="false">Running</string>
  <string name="tab_text_cmr" translatable="false">CMR</string>
  <string name="tab_text_completed" translatable="false">Completed</string>
  <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
  <string name="notification_channel_id" translatable="false">default</string>
  <string name="geofence_not_available" translatable="false">Geofence service is not available now</string>
  <string name="geofence_too_many_geofences" translatable="false">Your app has registered too many geofences</string>
  <string name="geofence_too_many_pending_intents" translatable="false">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
  <string name="unknown_geofence_error" translatable="false">
        Unknown error: the Geofence service is not available now
    </string>
  <string name="geofence_transition_invalid_type" translatable="false">
        Geofence transition error: invalid transition type %1$d
    </string>
  <string name="geofence_transition_entered" translatable="false">Entered</string>
  <string name="geofence_transition_exited" translatable="false">Exited</string>
  <string name="unknown_geofence_transition" translatable="false">Unknown Transition</string>
  <string name="geofence_transition_notification_text" translatable="false">
        Click notification to return to app
    </string>
  <string name="insufficient_permissions" translatable="false">Insufficient permissions.</string>
  <string name="permission_rationale" translatable="false">Location permission is needed for core functionality</string>
  <string name="permission_denied_explanation" translatable="false">Permission was denied, but is needed for core
        functionality.</string>
  <string name="pending">Pending</string>
  <string name="running">Running</string>
  <string name="cmr">CMR</string>
  <string name="completed">Completed\u0020</string>
  <string name="label_new">NEW</string>
  <string name="label_updated">UPDATED</string>
  <string name="label_deleted">DELETED</string>
  <string name="label_changed">CHANGED</string>
  <string name="label_done">DONE</string>
  <string name="label_brush" translatable="false">Brush</string>
  <string name="label_save" translatable="false">Save</string>
  <string name="lat" translatable="false">Lat</string>
  <string name="lng" translatable="false">Lng</string>
  <string name="alt" translatable="false">Alt</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_ok">OK</string>
  <string name="action_save">Save</string>
  <string name="action_upload">Upload</string>
  <string name="action_delete">Delete</string>
  <string name="action_warning">Warning</string>
  <string name="action_start">Start</string>
  <string name="action_open">Open</string>
  <string name="action_download">Download</string>
  <string name="action_exit">Exit</string>
  <string name="action_quit">Quit</string>
  <string name="action_upload_photos">Upload Photos?</string>
  <string name="action_upload_photos_message">Would you like to upload the photos?</string>
  <string name="action_uploading_photos">Uploading photos&#8230;</string>
  <string name="action_delete_photo">Delete photo?</string>
  <string name="action_delete_photo_message">Are you sure you want to delete this photo?</string>
  <string name="action_photo_no_longer_exists">Photo no longer exists!</string>
  <string name="action_photo_damaged">Photo damaged or no longer exists!</string>
  <string name="action_start_order">Start task</string>
  <string name="action_start_task_msg">Do you want to start the task?</string>
  <string name="menu_protocol">Protocol</string>
  <string name="menu_settings">Settings</string>
  <string name="key_taskId" translatable="false">taskID</string>
  <string name="key_orderNo" translatable="false">orderNo</string>
  <string name="menu_history">History</string>
  <string name="history_email_theme" translatable="false">Activity history</string>
  <string name="csv_attached" translatable="false">CSV file attached to email:</string>
  <string name="error_history_email" translatable="false">email client not found, please install mail app.</string>
  <string name="ph_time" translatable="false">15:43 21.12.20</string>
  <string name="ph_message" translatable="false">Driving to unloading</string>
  <string name="ph_task_id" translatable="false">1234</string>
  <string name="ph_order_no" translatable="false">2020/15/152</string>
  <string name="progress_bar_placeholder" translatable="false">Syncing&#8230;</string>
  <string name="menu_about">About</string>
  <string name="action_lets_start">Let\'s Start</string>
  <string name="action_security_code">Security Code</string>
  <string name="action_security_code_message">Enter the security code.</string>
  <string name="action_warning_notice">Warning notice</string>
  <string name="client_id_is_not_active">Client-ID is not active!</string>
  <string name="no_internet">No Internet!</string>
  <string name="action_next">Next Step</string>
  <string name="action_finished">Finished</string>
  <string name="action_start_activity">Start</string>
  <string name="action_close">Close</string>
  <string name="action_previous_task_message">You have to complete the previous task first!</string>
  <string name="action_update">Update</string>
  <string name="action_update_message">Update completed!</string>
  <string name="action_exception_on_rest_api">Exception on REST-API!</string>
  <string name="action_later">Later</string>
  <string name="action_not_confirmed" translatable="false">Not confirmed</string>
  <string name="action_erledict" translatable="false">Erledigt</string>
  <string name="action_deleted" translatable="false">Deleted</string>
  <string name="next">Next</string>
  <string name="start">Start</string>
  <string name="document_type">Dokument Type</string>
  <string name="document_type_na">No (N/A)</string>
  <string name="document_type_pod">Proof of Delivery (POD)</string>
  <string name="document_type_cmr">CMR</string>
  <string name="document_type_pn">Pallets Note (PN)</string>
  <string name="document_type_sc">Safety Certificate (SC)</string>
  <string name="document_type_si">Shipment Image (SI)</string>
  <string name="document_type_dsi">Damaged Shipment Image (DSI)</string>
  <string name="document_type_dvi">Damaged Vehicle Image (DVI)</string>
  <string name="editing_camera">Camera</string>
  <string name="editing_category">Category</string>
  <string name="editing_tools">Tools</string>
  <string name="editing_brush">Brush</string>
  <string name="editing_text">Text</string>
  <string name="editing_eraser">Eraser</string>
  <string name="editing_undo">Undo</string>
  <string name="editing_redo">Redo</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="search">Search</string>
  <string name="map">Map</string>
  <string name="camera">Camera</string>
  <string name="document">Document</string>
  <string name="registration_started" translatable="false">Device Registration started&#8230;</string>
  <string name="registration_rest_error" translatable="false">Error on REST-API&#8230;</string>
  <string name="registration_success" translatable="false">Device Registration Successful!</string>
  <string name="registration_number">No Vehicle</string>
  <string name="task_status">Task Status</string>
  <string name="task_finish">Task Finish</string>
  <string name="due_in">Due in</string>
  <string name="order_no">Order No</string>
  <string name="task_id">Task No</string>
  <string name="task">Task</string>
  <string name="activity_status">Activity Status</string>
  <string name="task_total_status">Task Total Status</string>
  <string name="customer">Customer</string>
  <string name="customer_no">ID-No</string>
  <string name="reference_1">Reference 1</string>
  <string name="reference_2">Reference 2</string>
  <string name="description">Description</string>
  <string name="address">Address</string>
  <string name="contact">Contact</string>
  <string name="contacts_available">Contacts available</string>
  <string name="notes">Notes</string>
  <plurals name="numberOfNotesAvailable">
    <item quantity="one">%d comment available</item>
    <item quantity="other">%d comments available</item>
  </plurals>
  <string name="dpl" translatable="false">DPL</string>
  <string name="number_of_paletts">Number of pallets</string>
  <string name="un_no" translatable="false">UN-No.</string>
  <string name="adr_class" translatable="false">ADR Class</string>
  <string name="client">Client</string>
  <string name="geo_data">Geodata</string>
  <string name="name">Name</string>
  <string name="loading_order">Loading order</string>
  <string name="contact_type_persecutor">Persecutor</string>
  <string name="contact_type_second_persecutor">2. Persecutor</string>
  <string name="contact_type_customer">Customer</string>
  <string name="dangerous_goods">Dangerous Goods</string>
  <string name="palette_exchange">Palette Exchange</string>
  <string name="task_information">Task Information</string>
  <string name="order">Order</string>
  <string name="action">Action</string>
  <string name="timestamp">Timestamp:</string>
  <string name="new_document">New Document!</string>
  <string name="new_document_message">You have got a new Document received.</string>
  <string name="exit_message">Do you want to quit ABONA Driver App?</string>
  <string name="order_documents">Images for the order</string>
  <string name="order_documents_message">Start the job first!</string>
  <string name="log_title_documents" translatable="false">Documents</string>
  <string name="log_document_upload" translatable="false">Document upload</string>
  <string name="log_doc_size" translatable="false">got %d files</string>
  <string name="log_document_download" translatable="false">Documents download</string>
  <string name="action_type_pick_up">Pick Up</string>
  <string name="action_type_drop_off">Drop Off</string>
  <string name="action_type_tractor_swap">Tractor Swap</string>
  <string name="action_type_general">General</string>
  <string name="action_type_delay">Delay</string>
  <string name="action_type_changed_by_a" translatable="false">Changed by Abona</string>
  <string name="action_type_unknown">Unknown</string>
  <string name="hint_ip_address" translatable="false">IP Address</string>
  <string name="need_permissions_title">Need Permissions!</string>
  <string name="need_permissions_message" translatable="false">Please check phone settings.</string>
  <string name="dialog_language_title" translatable="false">Select Language</string>
  <string name="dialog_not_found_title" translatable="false">Not Found</string>
  <string name="dialog_not_found_message" translatable="false">Task existiert nicht mehr!</string>
  <string name="dialog_register" translatable="false">Device registration</string>
  <string name="status_driving_to_loading" translatable="false">Driving to loading</string>
  <string name="clear_log" translatable="false">clear log</string>
  <string name="delay_started">Started:</string>
  <string name="delay_finished">Finished:</string>
  <string name="delay_delay">Delay:</string>
  <string name="synchronization">Synchronization</string>
  <string name="delay_reasons">Delay reasons</string>
  <string name="offline_confirmations">Driver activity and Task confirmations</string>
</resources>