<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <RelativeLayout
      android:id="@+id/relativeLayout"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <!-- BACK BUTTON -->

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_history_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/margin_XVI"
        android:layout_marginEnd="@dimen/margin_XVI"
        android:backgroundTint="@color/clrAbona"
        android:padding="@dimen/margin_XVI"
        android:src="@drawable/ic_arrow_back"
        android:tint="@color/white" />

    <com.abona_erp.driver.app.ui.widget.AsapTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/btn_history_back"
        android:text="@string/menu_history"
        android:textColor="@color/grey_80"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/text_order_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:gravity="left|center_vertical"
        android:minWidth="100dp"
        android:text="@string/order_no"
        android:textColor="@color/dark"
        android:textSize="@dimen/margin_XVI" />


    <TextView
        android:id="@+id/text_task_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/margin_XVI"
        android:layout_toStartOf="@+id/text_order_no"
        android:gravity="left|center_vertical"
        android:minWidth="60dp"
        android:text="@string/task_id"
        android:textColor="@color/dark"
        android:textSize="16sp" />


  </RelativeLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
      tools:listitem="@layout/history_item" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_clear_log"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/margin_XVI"
      android:layout_marginBottom="@dimen/margin_XVI"
      android:drawableStart="@drawable/ic_reset"
      android:drawablePadding="@dimen/spacing_medium"
      android:drawableTint="@color/clrIcon"
      android:text="@string/clear_log"
      app:backgroundTint="@color/colorPrimary"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>