<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


  <com.abona_erp.driver.app.ui.widget.AsapTextView
      android:id="@+id/sync_progress_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_XVI"
      android:layout_toEndOf="@id/btn_sync_back"
      android:text="@string/synchronization"
      android:textColor="@color/grey_80"
      android:textSize="28sp"
      app:layout_constraintBottom_toBottomOf="@+id/btn_sync_back"
      app:layout_constraintStart_toEndOf="@+id/btn_sync_back"
      app:layout_constraintTop_toTopOf="@+id/btn_sync_back" />



  <ScrollView
      android:id="@+id/scrollView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_sync_back">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


      <com.abona_erp.driver.app.ui.widget.AsapTextView
          android:id="@+id/text_delay_header"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_margin="8dp"
          android:text="@string/delay_reasons" />


      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recyclerDelays"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          tools:listitem="@layout/history_item" />


      <com.abona_erp.driver.app.ui.widget.AsapTextView
          android:id="@+id/text_confirm_header"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_margin="8dp"
          android:text="@string/offline_confirmations" />

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recyclerConfirmations"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          tools:listitem="@layout/history_item" />
    </LinearLayout>
  </ScrollView>


  <androidx.appcompat.widget.AppCompatImageButton
      android:id="@+id/btn_sync_back"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_VIII"
      android:layout_marginTop="@dimen/margin_VIII"
      android:backgroundTint="@color/clrAbona"
      android:padding="@dimen/margin_XVI"
      android:src="@drawable/ic_arrow_back"
      android:tint="@color/white"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>